--- a/css/index.css
+++ b/css/index.css
@@ -5,115 +5,62 @@
 body {
   font-family: "Big Shoulders Text", cursive;
   margin: 0;
+  padding: 0;
+  color: #333;
+
 }
 
 /* Header styles */
-.about-container {
-  text-align: center;
-  color: black;
-  background-color: rgba(255, 255, 255, 0.5);
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  z-index: 100;
-  width: 100%;
-}
-
+.about-container,
 .logo-container {
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.4);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: absolute;
-  z-index: 100;
-  height:automatic;
-  width: 100%;
-}
-
-
-.locations-container {
-  text-align: center;
+  color: #333
   background-color: rgba(255, 255, 255, 0.5);
   display: flex;
   flex-direction: column;
-  align-items: center;
   position: absolute;
   z-index: 100;
   width: 100%;
-  top: 50%; /* Center vertically */
-  transform: translateY(-50%); /* Adjust for vertical centering */
-}
-/* Media query for mobile */
-@media screen and (max-width: 576px) {
-  .locations-container {
-    top: 50%; /* Center vertically on top of the carousel in mobile */
-    transform: translateY(-150%); /* Adjust for vertical centering */
-  }
 }
 
-/* Media query for mobile */
-@media screen and (max-width: 576px) {
-  .about-container {
-    display: none;
-  }
-}
 .logo {
   width: 50%;
   height: auto;
 }
-
-.nav-logo img {
-  max-width: auto;
+.logo-container {
   height: auto;
-  display: inline;
-  margin-right: 20px;
 }
 
-/* Navigation styles */
-.nav-flex-row,
-.nav-item-tile {
-  list-style: none;
+/* Center the locations container in the carousel */
+.locations-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 10px;
-  z-index: 100;
-}
-
-.nav-flex-row {
-  display: inline;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
   position: absolute;
-  left: 0;
   width: 100%;
-}
-
-.navbar-nav {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.navbar-nav .nav-item {
-  margin: 0 10px;
-}
-
-.navbar-nav .nav-link {
+  top: 70%;
+  text-align: center; /* Optional: Center the text inside the container */
+  background-color: rgba(255, 255, 255, 0.5);
+  color: #333;
   font-family: "Big Shoulders Text", cursive;
-  color: #ffffff;
-  font-size: 1.5em;
-  text-transform: uppercase;
-  font-weight: 300;
+  font-size: x-large;
+  font-weight: 600;
+  z-index: 100;
+  transform: translateY(-150%);
 }
 
 .location {
-  display: inline-flexbox;
+  display: flex;
+  flex-direction: column;
   margin: 1px;
   align-items: center;
   font-family: "Big Shoulders Text", cursive;
   font-size: x-large;
-  font-weight: 600;
+  color: #333;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  font-weight: 300;
 }
 
 .locations a {
@@ -123,7 +70,8 @@ body {
   flex-direction: column;
   align-items: center;
   font-family: "Big Shoulders Text", cursive;
-  font-size: large;
+  font-size: x-large;
+  color: #333;
 }
 
 .locations {
@@ -138,62 +86,108 @@ body {
   font-size: 1.2em;
   text-transform: uppercase;
   font-weight: 300;
-  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Big Shoulders Text", cursive;
+  margin: 1px;
+}
+
+/* Media query for mobile */
+@media screen and (max-width: 576px) {
+  .locations-container {
+    width: 100%;
+    top: 90%; /* Center vertically on top of the carousel in mobile */
+    left: 0;
+
+
+    transform: translateY(-150%); /* Adjust for vertical centering */
+  }
+}
+
+
+/* Media query for smaller screens */
+@media screen and (max-width: 576px) {
+  .about-container,
+  .logo-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .logo {
+    width: 50%;
+    height: auto;
+
+  }
+}
+
+/* Navigation styles */
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0;
+  color: #fff;
+  position: absolute;
+  width: 100%;
+  z-index: 100;
+
+  }
+
+
+nav-brand {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  font-size: 2em;
+  font-weight: 700;
+  color: #333;
+  text-transform: uppercase;
+  text-decoration: none;
+  margin-left: 20px;
+}
+
+/* Add this CSS block to style the navigation bar image */
+.navbar-brand img {
+  max-width: 100px; /* Set the maximum width of the logo */
+  height: auto; /* Maintain the aspect ratio */
+  margin-right: 10px; /* Adjust the margin for spacing */
+}
+
+/* Optional: Add a style for the navbar background color */
+.navbar {
+  background-color: rgba(14, 77, 141, 255);
+  color: #fff;
 }
 
 /* Media queries */
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .nav-flex-row {
     margin-top: 10px;
   }
-}
 
-@media screen and (max-width: 576px) {
-  .locations-container {
-    top: 50%;
-  }
-  .nav-flex-row,
-  .nav-item-tile {
-    margin-top: 10px;
-  }
-
-  .nav-item-tile {
-    margin: 1px;
+  /* Dropdown styles */
+  .dropdown {
+    display: block;
+    position: relative;
+    background-color: none;
+    box-shadow: none;
+    width: 100%;
+    margin-top: 0;
   }
 
-  .locations {
-    padding: 1px;
+  .dropdown li,
+  .dropdown li:last-child {
+    border-bottom: none;
   }
 
-  .location span {
-    font-size: 2em;
+  .dropdown li a {
+    color: #333;
   }
 }
-
-/* Dropdown styles */
-.dropdown {
-  display: none;
-  position: absolute;
-  background-color: none;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-  z-index: 1;
-  width: max-content;
-  margin-top: 0px;
-}
-
-.dropdown li {
-  border-bottom: none;
-}
-
-.dropdown li:last-child {
-  border-bottom: none;
-}
-
-.dropdown li a {
-  color: #333;
-}
-
-
 
 /* Footer styles */
 .footer {
@@ -223,6 +217,7 @@ body {
     margin: 5px 0;
   }
 }
+
 /* Button styles */
 #order-now-btn {
   background-color: teal;
@@ -351,123 +346,6 @@ a.link-to-book:hover {
   }
 }
 
-/* Navbar styles */
-
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: rgba(14, 77, 141);
-  padding: 20px 0;
-
-}
-
-.nav-logo-container {
-  display: flex;
-  align-items: center;
-}
-
-.nav-logo img {
-  max-width: 30%;
-  max-height: 30%;
-  display: center;
-  
-}
-
-.nav-links {
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-
-}
-
-.nav-links a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.mobile-nav-toggle {
-  display: none;
-  background: none;
-  border: none;
-  cursor: pointer;
-  font-size: 1.5em;
-  color: #fff;
-}
-
-.mobile-nav-links {
-  display: none;
-  flex-direction: column;
-  position: absolute;
-  top: 70px;
-  right: 0;
-  background-color:rgba(14, 77, 141, 0.9);
-  width: 100%;
-  padding: 15px;
-  box-sizing: border-box;
-}
-
-.mobile-nav-links a {
-  color: #fff;
-  text-decoration: none;
-}
-
-/* Responsive styles */
-@media (max-width: 576px) {
-  .nav-links {
-    display: none;
-  }
-
-  .mobile-nav-toggle {
-    display: block;
-  }
-  /* Overlay styles */
-.overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
-  z-index: 99; /* Ensure it's above the mobile nav */
-}
-
-/* Add this to the existing CSS */
-
-/* Adjust mobile navigation position for mobile view */
-@media (max-width: 768px) {
-  .nav-links {
-    display: none;
-  }
-
-  .mobile-nav-toggle {
-    display: block;
-  }
-
-  .mobile-nav-links {
-    top: 0;
-    left: 0;
-    right: auto;
-  }
-
-  /* Adjust logo position for mobile view */
-  .nav-logo {
-    order: -1;
-    align-items: center;
-    display: inline;
-  }
-
-  /* Show overlay when mobile nav is active */
-  .mobile-nav-active .overlay {
-    display: inline;
-
-  }
-} 
-
 /* Default styles for FOOD MENU section */
 .food-menu {
   text-align: center;
@@ -505,5 +383,3 @@ a.link-to-book:hover {
     height: auto; /* Adjust height for smaller screens */
   }
 }
-
-
