--- a/css/index.css
+++ b/css/index.css
@@ -29,6 +29,7 @@ body {
 .logo-container {
   height: auto;
   background-color: rgba(255, 255, 255, 0.5);
+  z-index: 100;
 }
 
 /* Center the locations container in the carousel */
