--- a/css/index.css
+++ b/css/index.css
@@ -281,7 +281,7 @@ a.link-to-book:hover {
   width: 95%;
   margin: auto;
   font-family: "Big Shoulders Text", cursive;
-  font-size: 1.8em;
+  font-size: .75em;
   text-transform: uppercase;
 }
 
