--- a/css/index.css
+++ b/css/index.css
@@ -268,6 +268,7 @@ nav-brand {
 
 
 .social-links a {
+  color: rgba(14, 77, 141, 255);
   margin: 0 10px;
   font-size: 24px;
   text-decoration: none;
@@ -282,6 +283,7 @@ nav-brand {
   }
 
   .social-links a {
+    color: rgba(14, 77, 141, 255);
     margin: 5px 0;
   }
 }
@@ -523,7 +525,7 @@ p {
 }
   
 /* Media query for mobile devices */
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 576px) {
   .food-menue{
     margin: 10px 0; /* Adjust margin for smaller screens */
   }
@@ -537,5 +539,16 @@ p {
 
   .menu-container {
     height: auto; /* Adjust height for smaller screens */
+  }
+  .form-container {
+    font-family: Arial, sans-serif;
+    background-color: none;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
